--- a/src/assets/stylus/variable.styl
+++ b/src/assets/stylus/variable.styl
@@ -6,6 +6,6 @@ $second-text-color = rgb(51, 51, 51)
 $title-color = rgb(0, 113, 194)
 $title-active-color = rgb(188, 91, 1)
 
-$top-height = 50px
-$nav-height = 60px
-$search-height = 260px
+$top-height = .5rem
+$nav-height = .6rem
+$search-height = 2.6rem
